backpeddling on a few gary design elements

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -7,7 +7,7 @@
   clear:both;
   z-index:1;
   line-height: normal;
-  background: url(images/leadsto-arrow.png) 50% 54px no-repeat #3f5353;
+  background: url(images/leadsto-arrow.png) 50% 54px no-repeat #3b4e4e;
   margin-bottom: 9px;
   border: none;
   }
@@ -17,7 +17,7 @@
   font-size: 1.56em;
   line-height: 33px;
   color:#fff;
-  background: url(images/aor-h3.png) 0 0 repeat-x #3f5353;
+  background: url(images/aor-h3.png) 0 0 repeat-x #3b4e4e;
   padding-top: 0;
   padding-bottom: 0;
   font-weight: normal;
@@ -62,7 +62,7 @@
     border-left: 2px solid #db7002;
     left:262px;
     top: 91px;
-    background: #3f5353;
+    background: #3b4e4e;
     text-align: left;
     line-height:1.35em;
     font-size:13px;
@@ -102,7 +102,7 @@
   }
 
 #block-iqss_gking-areas_of_research dt.active {
-  background: url('images/line.png') no-repeat 0 50% #3f5353;
+  background: url('images/line.png') no-repeat 0 50% #3b4e4e;
   }
 
 #block-iqss_gking-areas_of_research #methods dt.active {
@@ -110,7 +110,7 @@
   }
 
 #block-iqss_gking-areas_of_research dt.active span {
-  background: #3f5353;
+  background: #3b4e4e;
   }
 
 #block-iqss_gking-areas_of_research dt span a,
