backpeddling on a few gary design elements

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -88,10 +88,12 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #bl
   font-size: 1.3em;
   }
 
+/*
 .block h3.title, #block-vsite_menus-1 li.first {
   -moz-border-radius: 4px 4px 0 0;
   -webkit-border-radius: 4px 4px 0 0;
   }
+*/
 
 #content .node h3.title {
   border: none;
@@ -199,10 +201,12 @@ a.more {
   }
 
 #content, .column .block {
+  /*
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+  */
   padding: 0 26px 26px 26px;
-  border:1px solid #484848;
+  border:1px solid #ddd;
   background: #fff;
   }
 
@@ -274,7 +278,7 @@ body.section-category .node {
   }
 
 #header #header-main, #header #header-right, #header #header-left {
-  padding-bottom: 8px;
+  padding-bottom: 0;
   margin-top:6px;
   padding-top:0;
   }
