--- a/sites/all/themes/openscholar/scholar_base/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/biblio.css
@@ -258,8 +258,7 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
 
 .node-type-biblio img, .biblio-entry img {
   border: 1px solid #777;
-  width:100%;
-  height: 100%;
+  max-width:100%;
   }
 
 .biblio-entry .flL {
