hiding book covers on taxonomy pages

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -711,6 +711,11 @@ body.section-category .taxonomy-term-description {
   }
 
 
+.taxonomy-term-child .node-inner .flL {
+  display:none;
+  }
+
+
 /*FRONT PAGE BIO*/
 
 .page-home #node-3793 {
