--- a/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
@@ -1,12 +1,11 @@
 body {
-  background:#2f668d;
+  background:#293e4b;
   font: 13px/1.5em helvetica, arial, sans-serif;
   padding-bottom:30px;
   }
 
 #wrapper {
   margin-top: 0;
-  background: url(images/wrapper.png) repeat-x #2f668d;
   }
 
 #container, #content-wrapper, #content-wrapper-inner, #content, #panel-wrapper, .panel {
@@ -20,7 +19,7 @@ body {
   }
 
 .panel {
-  background: url(images/top-corners-a.png) 0 0 no-repeat transparent;
+  background: url(images/top-corners.png) 0 0 no-repeat transparent;
   padding-top: 20px;
   }
 
@@ -68,7 +67,7 @@ h2 {
   margin: 0 0 .5em 0;
   }
 
-#block-openscholar_front-top_links a {
+#big-button a {
   background:url(images/get-your-site-button.png) no-repeat;
   text-align: center;
   line-height: 32px;
@@ -200,7 +199,7 @@ ul#top-front li a:hover {
 #about-abstract {
   width:257px;
   padding: 8px 18px 0 18px;
-  background: #f6f6f6;
+  background: #e2e7eb;
   }
 
 #about-abstract h2 {
@@ -244,7 +243,7 @@ p#learn-more-toggle {
   }
 
 p#learn-more-toggle a {
-  background: #262626;
+  background: #132632;
   margin: 0 -18px;
   display:block;
   padding: 18px;
