--- a/sites/all/themes/openscholar/scholar_base/toggle-slider.css
+++ b/sites/all/themes/openscholar/scholar_base/toggle-slider.css
@@ -18,7 +18,7 @@
   }
 
 .toggle {
-  background: url(images/show-menu.png) 100% 7px no-repeat transparent;
+  background: url(images/show-menu.png) 100% .2em no-repeat transparent;
   padding-right: 25px;
   }
 
