--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -687,3 +687,24 @@ div.error {
   width:21px;
   float: none;
   }
+
+.clear-block:after {
+  content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+  }
+
+.clear-block {
+	display: inline-block;
+  }
+
+.clear-block {
+	display: block;
+  }
+
+* html .clear-block {
+	height: 1%;
+  }
