--- a/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
+++ b/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
@@ -118,7 +118,7 @@ p.copy {
   }
 
 .sidebar-right #content-main {
-  width: 671px;
+  width: 678px;
   }
 
 .sidebar-left #content-main {
@@ -207,12 +207,6 @@ body.no-sidebars #content-wrapper {
 
 #header .column {
   padding: 19px 0 0 0;
-  display:table;
-  }
-
-#header .column .block {
-  display:table-cell;
-  vertical-align:middle;
   }
 
 #header-right {
@@ -282,23 +276,22 @@ body.no-sidebars #content-wrapper {
   padding-left: 12px;
   }
 
-
 #block-scholar-1 {
   float:left;
   }
 
 #block-vsite_menus-1 {
-  float: right;
-  width: 280px;
+  width: 251px;
+  float:right;
   }
 
 #block-vsite_menus-1 ul {
   -moz-column-count:2;
-	-moz-column-gap: 4px;
+	-moz-column-gap: 1px;
 	-webkit-column-count: 2;
-	-webkit-column-gap:4px;
+	-webkit-column-gap:1px;
 	column-count: 2;
-	column-gap: 4px;
+	column-gap: 1px;
 	padding: 0;
   }
 
@@ -310,6 +303,7 @@ body.no-sidebars #content-wrapper {
 
 #block-vsite_menus-1 li a ,#block-vsite_menus-1 li a:visited{
   color: #000;
+  font-size: 12px;
   }
 
 #block-vsite_menus-1 li a:hover {
