--- a/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
@@ -1,113 +1,102 @@
 body {
-  background:#293e4b;
-  font: 13px/1.5em helvetica, arial, sans-serif;
-  padding-bottom:30px;
-  }
+    background: #efefef;
+    color:#313030;
+    font:.9em/165% arial, helvetica, sans-serif;
+    }
 
 #wrapper {
-  margin-top: 0;
+  margin-top: 42px;
   }
 
-
-#container {
-  width: 1000px;
+#container,
+.front #content-top,
+.front #content-bottom {
+  width: 900px;
   margin: 0 auto;
-  overflow:hidden;
   }
 
-#content-wrapper {
-  background: #fff;
-  -moz-border-radius: 25px;
-  -webkit-border-radius: 25px;
-  border-radius: 25px;
+.front #container {
+  width: 962px;
   }
 
-#content-wrapper .column {
-  padding-top: 30px;
-  }
+.not-front #content-main,
+.front #content-top,
+.front #content-bottom {
+ padding: 30px 30px 40px 30px;
+ background: #fff;
+ border: 1px solid #ccc;
+ -moz-border-radius: 6px;
+ -webkit-border-radius: 6px;
+ }
 
-#content-bottom {
-  clear: both;
-  padding-bottom: 19px;
-  border-top: 1px solid #ccc;
-  }
+a, a:visited {
+    color:#990000;
+    text-decoration: none;
+    }
 
-body.no-sidebars #content-main {
-  padding:30px;
-  }
-
-body.front #content-main {
-  padding:0;
-  }
-
-/* HEADER ELEMENTS */
-
-
-
-#header {
-    height: 110px;
+a:hover {
+    color:#3399CC;
     }
 
 #header h1 {
-  width: 231px;
-  height: 76px;
-  background: url(images/logo.png) no-repeat;
-  text-indent: -999em;
+  font-weight:normal;
+  font-size: 26px;
+  line-height: 44px;
+  margin-left: 30px;
   float:left;
-  margin-top:14px;
-  margin-left: 9px;
   }
 
 #header h1 a, #header h1 a:visited {
-  display:block;
-  width: 231px;
-  height: 76px;
+  color: #313030;
+  }
+
+h2, h3, #sidebar-left a, #header {
+  font-weight: bold;
+  }
+
+h3 {
+  font-size: 1.4em;
   }
 
 
-#header h1 a, #header h1 a:visited {
-    color:#282828;
-    }
-
-h2 {
-  margin: 0 0 .5em 0;
+div.form-item {
+  border: none;
   }
 
-.big-button {
+
+
+/*HEADER */
+
+#header {
+  min-height: 70px;
+  }
+
+
+#block-openscholar_front-top_links .content {
+  float:right;
+  }
+
+#block-openscholar_front-top_links a {
+  background:url(images/get-your-site-button.png) no-repeat;
   text-align: center;
-  font-size: .9em !important;
-  line-height: normal !important;
-  margin-top: .5em;
-  margin-bottom: 1em;
-  color: #777;
-  }
-
-.big-button a {
-  background:url(images/get-your-site-button.png) no-repeat transparent;
-  line-height: 48px !important;
-  font-size: 19px;
+  line-height: 38px;
   display: block;
-  width: 226px;
-  height: 49px;
+  width: 169px;
+  height: 42px;
   color: #FFF;
   text-decoration: none;
   font-weight: bold;
-  margin: 0 auto;
-  /*
-  text-shadow: #666 0px 1px 1px;
-  text-shadow: rgba(51,51,51, .2) 0px 1px 1px;
-  */
+  text-shadow: #333 0px 1px 1px;
+  text-shadow: rgba(51,51,51, .4) 0px 1px 1px;
   }
+
 
 ul#top-front li#get-form a:hover {
   color: #f0ff00;
   }
 
 
-/*HEADER */
-
-
-body.front h2.title {
+#block-openscholar_front-site_mission h2.title {
   float:right;
   color:#9f9e9e;
   font-weight: normal;
@@ -116,384 +105,123 @@ body.front h2.title {
   margin-right: 27px;
   }
 
+/* Footer */
 
-/* FRONT PAGE */
-
-ul#top-front {
-  float:right;
+#footer {
+  padding: 10px 30px 30px 30px;
   }
 
-ul#top-front li {
-  float: left;
-  font-weight: normal;
-  margin-left: 20px;
-  line-height:42px;
-  margin-top: 21px;
-  }
-
-ul#top-front li a, ul#top-front li a:visited {
-  color: #FFF;
-  }
-
-ul#top-front li a:hover {
-  text-decoration: underline;
+p.copy {
+  margin-top: 0;
   }
 
 
-.front #content-top .content {
-  height: 321px;
-  margin: 0 auto;
-  padding-top: 25px;
+/* Different Tables for admin use */
+
+table {
+  font-size: .8em;
   }
 
-#block-openscholar_front-video_info {
-  margin-left:30px;
+table th {
+  font-size: .8em;
+  text-transform: uppercase;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  padding: 5px;
   }
 
-#content .featureblock h3, #content .featureblock p {
-  font-size: 14px;
-  line-height: 1.3em;
-  margin-bottom: 1em;
+tr.even, tr.odd {
+  border-bottom: 1px solid #ccc;
+  padding: .1em .6em;
   }
 
+tr.even {
+  background-color: #eee;
+  }
 
-#panel-wrapper {
-  width: 2000px;
+td, td.description {
+  border: 1px solid #ddd;
+  padding: 5px;
+  color: #222;
+  font-size: .9em;
+  }
+
+.section-websites .view-openscholar-sites td {
+  width: 25%;
+  }
+
+/* FRONT PAGE LAYOUT */
+
+.front #content-top {
+  min-height: 359px;
   position: relative;
+  margin-bottom: 10px;
   }
 
-.panel {
-  float: left;
-  width: 1000px;
-  }
 
-/*.
-row {
-  background: #fff;
-  }
-*/
-
-#content-wrapper:after,
-.row:after {
-  content: '.';
-  height: .1px;
-  display:block;
-  clear: both;
-  visibility:hidden;
-  }
-
-#publications,
-#activity,
-#about-abstract {
-  width: 235px;
-  padding:50px 30px;
-  float: left;
-  }
-
-#publications {
-  width: 382px;
-  }
-
-#publications h2, #activity h2 {
-  color: #959595;
-  font-size: 28px;
-  }
-
-#publications .views-row {
-  margin-bottom: 0;
-  }
-
-#publications .views-row .node {
-  margin-bottom: .5em;
-  }
-
-#publications .toggle {
-  background-position: 3px;
-  }
-
-#activity {
-  padding-left: 0;
-  padding-top:50px;
-  }
-
-#activity h2 {
-  font-size: 19px;
-  }
-
-#activity h2,
-.view-vsite-activity {
-  padding-left: 30px;
-  }
-
-.view-vsite-activity  {
-  border-left: 1px solid #dbdbdb;
-  }
-
-#about-abstract {
-  width:257px;
-  padding: 28px 18px 0 18px;
-  background: #e2e7eb;
-  -moz-border-radius: 0 25px 0 0;
-  -webkit-border-radius: 0 25px 0 0;
-  border-radius: 0 25px 0 0;
-  }
-
-#about-abstract h2 {
-  font-size: 22px;
-  font-weight: 500;
-  line-height: 1.2em;
-  color:#a35353;
-  }
-
-#about-abstract p {
-  font-size: 14px;
-  line-height: 23px;
-  }
-
-#about-abstract .illustration {
-  float: right;
-  margin: .5em 0 1em 1em;
-  width:67px;
-  height:67px;
-  background: url(images/widget.png) no-repeat 0 0 transparent;
-  }
-
-#about-abstract .illust-widget {
-  margin-right: 1em;
-  }
-
-#about-abstract .illust-wrench {
-  width:70px;
-  height: 79px;
-  background-image: url(images/wrench.png);
-  }
-
-#about-abstract .illust-theme {
-  width:105px;
-  height: 96px;
-  background-image: url(images/theme.png);
-  }
-
-p#learn-more-toggle {
-  margin:1em 0 0 0;
-  }
-
-p#learn-more-toggle a {
-  background: #132632;
-  margin: 0 -18px;
-  display:block;
-  padding: 18px;
-  color: #fff;
-  font-weight: bold;
-  }
-
-#activity-toggle {
-  margin: 1em 0 1.5em 49px;
-  }
-
-#activity-toggle a, #activity-toggle a:visited {
-  background: url(images/black-arrow-left.png) no-repeat 0 50%;
-  padding-left: 13px;
-  color: #000;
-  }
-
-#activity-toggle a:hover {
-  text-decoration:underline;
-  }
-
-#activity .views-field-created {
-  color:#418f9e;
-  }
-
-#video-link {
+.front #content-top #block-openscholar_front-video_info {
   float:left;
   width: 638px;
-  margin-right: 15px;
-  margin-left: 44px;
   }
 
-#more-info {
-  float:left;
-  width:268px;
-  font-size:18px;
-  line-height: 1.2em;
-  margin-top: .6em;
-  }
-
-.row {
-  clear: both;
-  }
-
-.row-video {
-  padding-bottom: 1.5em;
-  }
-
-.row-features {
-  padding: 15px 0 30px 0;
-  background:#4c4d4e;
-  }
-
-.row-features h2 {
-  margin-left: 30px;
-  color: #fff;
-  text-shadow: #666 0px 1px 1px;
-  text-shadow: rgba(51,51,51, .2) 0px 1px 1px;
-  }
-
-.row-openscholar {
-  padding: 33px 23px;
-  }
-
-.row-openscholar p.docs,
-.row-openscholar p.os-link {
-  float: left;
-  width: 212px;
-  font-size: 15px;
-  line-height: 23px;
-  background: url(images/help-button.jpg) no-repeat 225px 50%;
-  padding-top: 15px;
-  padding-right:121px;
-  margin-right: 20px;
-  border-right: 1px solid #ccc;
-  }
-
-.row-openscholar p.os-link {
-  background: url(images/floating-glasses.png) no-repeat 225px 50%;
+.front #content-top #block-openscholar_front-site_mission {
+  float:right;
+  font-size: 23px;
   margin-bottom: 0;
-  width: 230px;
+  color: #4a4949;
+  line-height: 1.4em;
+  width: 240px;
+  margin-top:59px;
   }
 
-.row-openscholar .big-button {
-  float: left;
+
+/* CONTENT PROFILES */
+
+.field-field-user-profile-photo {
+  float: right;
   }
 
-.front #footer {
-  padding-top: 20px;
+p.single, ul.single, ul.single li {
+  display:inline;
   }
 
-p.copy a.poweredby {
-  background-position: 0 -29px;
-  }
-
-/* Tables */
-
-
-.view-iqss-project-sites td {
-  width: 20%;
-  padding: 17px;
-  font-size: 1.1em;
+p.single {
+  margin-right: 8px;
   }
 
 /* FRONT PAGE vSITE PROFILES */
 
 
-#block-views-openscholar_sites-block_2 ul {
+#block-views-openscholar_sites-block_2 ul, #block-views-openscholar_sites-block_2 .more-link {
   width: 100%;
-  height:200px
+  height: 253px;
   }
-
-
 #block-views-openscholar_sites-block_2, #footer {
   position:relative;
   }
 
-
 #block-views-openscholar_sites-block_2 h3 {
-  background: url(images/featured.png) 0 0 no-repeat transparent;
+  background: transparent;
   text-indent: -999em;
-  width:70px;
-  height: 64px;
-  margin: 0;
-  margin-top: -1px;
-  float:left;
-  }
-
-.block-search .content {
-  width: 200px;
-  height: 32px;
-  background: url(images/search.png) no-repeat 100% 0 transparent;
-  float:right;
-  margin: 13px 0 0 0;
-  }
-
-#block-views-openscholar_sites-block_2 .views-exposed-widget {
-  width: auto;
-  }
-
-#block-views-openscholar_sites-block_2 .views-exposed-form .views-exposed-widget {
-  float:none;
-  }
-
-.edit-title-wrapper, .block-search .form-item, .block-search .form-submit, .block-search .clear-block {
-  margin: 0;
-  padding: 0;
-  border: none;
-  }
-
-.block-search label {
   display:none;
-  }
-
-.block-search .form-text {
-  float:right;
-  width:164px;
-  height: 25px;
-  margin:3px 9px 0 0;
-  border: none;
-  }
-
-.block-search input.form-submit {
-  float:left;
-  background: transparent;
-  border: none;
-  width: 12px;
-  margin-top: 2px;
-  margin-right: 0;
-  margin-left:10px;
-  height: 30px;
-  text-indent: -9999em;
-  padding: 0 !important;
-  -moz-border-radius:0;
-  -webkit-border-radius:0;
-  border-radius:0;
-  }
-
-#views-exposed-form-iqss-project-sites-block-1 .form-actions {
   margin: 0;
   }
 
-#views-exposed-form-iqss-project-sites-block-1 span.views-throbbing {
-  position:absolute;
-  left: -45px;
-  top: 17px;
-  width: 21px;
-  height: 5px;
-  }
-
-
-#views-exposed-form-iqss-project-sites-block-1 span.form-button-wrapper {
-  background: transparent;
-  position: static;
-  display: inline;
-  padding: 0;
-  margin: 0;
-  }
-
-#search-person, #block-views-openscholar_sites-block_2 .views-exposed-form label {
-  display:none;
-  }
 
 #block-views-openscholar_sites-block_2 {
   clear: both;
-  background:#fff;
   }
 
 #block-views-openscholar_sites-block_2 .views-row {
   float: left;
   width: 134px;
-  margin-left: 30px;
+  margin-left: 19px;
   clear: none;
   font-size: 13px;
+  }
+
+#block-views-openscholar_sites-block_2 .views-row-1 {
+  margin-left:0;
   }
 
 #block-views-openscholar_sites-block_2 img, .view-iqss-project-sites img {
@@ -530,11 +258,18 @@ p.copy a.poweredby {
   height: auto;
   }
 
+#block-views-openscholar_sites-block_2 .more-link {
+  text-align: right;
+  background-position: 0 100%;
+  padding-bottom: 0;
+  height: auto;
+  }
+
 #block-views-openscholar_sites-block_2 .more-link a {
-  background: url(images/black-arrow-right.png) no-repeat 100% 50% #fff;
-  padding-right: 11px;
+  background: url(images/arrow-black.png) no-repeat 100% 50% #fff;
+  padding-right: 15px;
   color: #000;
   text-transform: capitalize;
   font-weight: bold;
-  margin-right: 30px;
+  margin-right: 28px;
   }
