--- a/sites/all/themes/custom/psr/psr-ie.css
+++ b/sites/all/themes/custom/psr/psr-ie.css
@@ -1,24 +1,12 @@
-body.header-left-main-right #header-left {
-  left: 256px;
-  }
-
-body.header-left-main #header-left {
-  left: -20px !important;
+#sidebar-left {
+	left: 221px;
 	}
 
-body.two-sidebars #sidebar-left {
-  left: 210px;
+#header-left {
+  left: 70px;
   }
 
-#block-vsite_menus-0 ul.menu li a {
-  height: 1%;
-  }
-
-body.two-sidebars #sidebar-left, body.sidebar-left #sidebar-left, body.two-sidebars #sidebar-right, body.sidebar-right #sidebar-right {
-  right: 0;
-  left: 0;
-  }
-
-#content-wrapper, #sidebar-left h3, #sidebar-right h3 {
-  _zoom:1;
+#container {
+  background-position: 1px 0;
+  _background-position: 11px 0;
   }
