--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -1,86 +1,20 @@
-body {
-    background: #6a92a0;
-     }
-
-/* LAYOUT ELEMENTS */
-
-#wrapper {
-  background: url(images/wrapper-bg.png) repeat-x #9ac0c9;
-  padding-top:0;
-  }
-
-/* HEADER ELEMENTS */
-
-.front #header {
-    background: url(images/projects-header.png) no-repeat 0 0 transparent;
-    height: 104px;
-    }
-
 #header h1 {
   width: 233px;
   height: 76px;
   margin-left: 0px;
-  background: url(images/projects-at-harvard-logo-on-white.png) 0 0 no-repeat;
+  background: url(images/projects-at-harvard-logo.png) 0 0 no-repeat;
   }
 
-.front #header h1 {
-  background-image: url(images/projects-at-harvard-logo.png);
-  margin-top: 14px;
+.row-video {
+  padding-top:2em;
+  padding-bottom: 0;
   }
 
-#header h1 a, #header h1 a:visited {
-  width: 233px;
-  height: 76px;
-  }
-
-ul#top-front li {
-  margin-top: 33px;
-  }
-
-ul#top-front li a, ul#top-front li a:visited {
-  color: #fff;
-  }
-
-ul#top-front li a:hover {
-  text-decoration: underline;
-  }
-
-
-.front #block-openscholar_front-top_links a {
-  margin-top: 33px;
-  }
-
-.front #content-top {
-  background-image: url(images/contain.png);
-  }
-
-#content-row-2 .featureblock {
-  border-color: #396173;
-  }
-
-#content-row-2 #feature-academic-content {
-  background:url(images/front-row2-create-anything.jpg);
-  }
-
-#content-row-2 #feature-biblio {
-  background:url(images/front-row2-biblio.jpg);
-  }
-
-#content-row-2 #feature-look-feel {
-  background:url(images/front-row2-lookfeel.jpg);
-  }
-
-#content-row-2 #feature-wordout {
+#word-out {
   background:url(images/front-row2-wordout.jpg);
   }
 
-#content-row-2 #feature-collaborate, #content-row-2 #feature-events {
-  background:url(images/front-row2-collaborate.jpg);
-  border-left: none;
-  border-right: none;
-  }
-
-#content-row-2 #feature-events {
+#feature-events {
   background:url(images/front-row2-events.png);
   }
 
@@ -104,125 +38,3 @@ ul#top-front li a:hover {
   margin: 0 0 0 -1px;
   }
 
-#block-views-iqss_project_sites-block_1 .views-exposed-form {
-  width: 345px;
-  height: 40px;
-  background: url(images/search-person.png) no-repeat 100% 0 transparent;
-  float:right;
-  margin: 5px 18px 10px 0;
-  position:relative;
-  }
-
-
-#block-views-iqss_project_sites-block_1 .views-exposed-form .views-exposed-widget, #block-views-iqss_project_sites-block_1 .views-exposed-form .views-exposed-widget .edit-title-wrapper,#block-views-iqss_project_sites-block_1 .views-exposed-form .form-item, #block-views-iqss_project_sites-block_1 .views-exposed-form .form-submit, #block-views-iqss_project_sites-block_1 .views-exposed-form .clear-block {
-  margin: 0;
-  padding: 0;
-  }
-
-
-#block-views-iqss_project_sites-block_1 .views-exposed-form .form-text {
-  float:left;
-  margin: 12px 0 0 10px;
-  width:263px;
-  border: none;
-  height: 16px;
-  }
-
-#block-views-iqss_project_sites-block_1 .views-exposed-form input.form-submit {
-  float:right;
-  background: transparent;
-  border: none;
-  width: 68px;
-  margin-top: 5px;
-  margin-right: 0;
-  height: 30px;
-  text-indent: -9999em;
-  line-height: 110%;
-  padding: 0 !important;
-  }
-
-#views-exposed-form-iqss-project-sites-block-1 .form-actions {
-  margin: 0;
-  }
-
-#views-exposed-form-iqss-project-sites-block-1 span.views-throbbing {
-  position:absolute;
-  left: -45px;
-  top: 17px;
-  width: 21px;
-  height: 5px;
-  }
-
-
-#views-exposed-form-iqss-project-sites-block-1 span.form-button-wrapper {
-  background: transparent;
-  position: static;
-  display: inline;
-  padding: 0;
-  margin: 0;
-  }
-
-#search-person, #block-views-iqss_project_sites-block_1 .views-exposed-form label {
-  display:none;
-  }
-
-#block-views-iqss_project_sites-block_1 {
-  clear: both;
-  }
-
-#block-views-iqss_project_sites-block_1 .views-row {
-  float: left;
-  width: 134px;
-  margin-left: 24px;
-  }
-
-#block-views-iqss_project_sites-block_1 img, .view-iqss-project-sites img {
-  border: 1px solid #535252;
-  width: 100px;
-  height: 100px;
-  }
-
-#block-views-iqss_project_sites-block_1 ul, #block-views-iqss_project_sites-block_1 .more-link {
-  clear: both;
-  }
-
-#block-views-iqss_project_sites-block_1 .views-admin-links {
-  position: absolute;
-  top: -30px;
-  right: 0;
-  }
-
-
-#block-views-iqss_project_sites-block_1 .more-link {
-  text-indent: -999em;
-  float: right;
-  margin-right: 18px;
-  text-align: left;
-  }
-
-#block-views-iqss_project_sites-block_1 .more-link a {
-  display:block;
-  width: 67px;
-  height: 32px;
-  background: url(images/more.png) no-repeat transparent;
-  cursor: pointer;
-  }
-
-#block-views-iqss_project_sites-block_2 {
-  min-height: 327px;
-  }
-
-#footer {
-  padding-top: 10px;
-  background: transparent;
-  border: none;
-  }
-
-.front p.copy {
-  color: #fff;
-  }
-
-.front p.copy a, .front p.copy a:visited {
-  text-decoration: underline;
-  color: #fff;
-  }
